part1/project/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: web-server
  ports:
    - name: http
      protocol: TCP
      port: 1234 
      targetPort: 8000
