part1/project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project
  namespace: project
spec:
  rules:
  - http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 80
      - path: /images
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 1234
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80
